--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my_app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://xharelosx.github.io/Harel-Asaf-Tikal-Course-Project/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -10,6 +11,7 @@
     "@types/node": "^12.12.26",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "gh-pages": "^2.2.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.4",
     "mobx-react-lite": "^1.5.2",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
