--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/node": "^12.12.26",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@types/react-router-dom": "^5.1.3",
     "gh-pages": "^2.2.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.4",
     "mobx-react-lite": "^1.5.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "typescript": "^3.7.5"
   },
