--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
+    "express": "^4.17.1",
     "gh-pages": "^2.2.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.4",
